[project]
name = "gui-chui-deng"
version = "0.1"
description = "鬼吹灯全集"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "cn2an",
]

[project.urls]
Homepage = "https://github.com/thesixonenine/gui-chui-deng"
Issues = "https://github.com/thesixonenine/gui-chui-deng/issues"
